--- a/menu.html
+++ b/menu.html
@@ -479,8 +479,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<p class="company-name">All Rights Reserved. &copy; 2018 <a href="#">Super Food Restaurant</a> Design By : 
-					<a href="https://html.design/">html design</a></p>
+						<p class="company-name">All Rights Reserved. &copy; 2024 </p>
 					</div>
 				</div>
 			</div>
